fix spacing

--- a/css/Experience/_experience.scss
+++ b/css/Experience/_experience.scss
@@ -36,7 +36,7 @@
 #compgirls {
     background-color: $primary;
     margin: 7px 0px 0px 0px; 
-    padding: 50px 0px 40px 0px;
+    padding: 50px 0px 0px 0px;
 
     h3 {
         padding: 0px;
@@ -46,7 +46,7 @@
 
     p {
         color: $secondary;
-        margin: 10px 0px 30px 0px;
+        margin: 10px 0px;
     }
 
     .text {
@@ -78,7 +78,7 @@
 #promo {
     background-color: $primary;
     margin: 7px 0px 0px 0px; 
-    padding: 50px 0px 40px 0px;
+    padding: 50px 0px 30px 0px;
 
     h3 {
         padding: 0px;
@@ -88,7 +88,7 @@
 
     p {
         color: $secondary;
-        margin: 10px 0px 30px 0px;
+        margin: 10px 0px;
     }
 
     .text {
